# slsd

./: .gitignore  README.md  config.py  daemon.py  dbus.py  lastfm.py  main.py  notes.md  pyproject.toml  slsd.sevice
.github/workflows/: publish.yml
scripts/: dbus-introspect.sh  get-mpris-serv.sh  list-mp2-metadata.sh  mp2-introspect.sh
src/slsd/: dbus.py  main.py
tests/: test_lastfm.py  test_player_init.py
